Update Player | PUT | Added user repo method for validation
